astonvilla-app/astonvilla-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astonvilla-svc
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: astonvilla
