astonvilla-app/astonvilla-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biblio-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mybiblio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: biblio-svc
            port:
              number: 8080
